funcionando bien el endpoint de producto, ahora trae la marca y categoria junto con el prodducto

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=AR-IT10743\\SQLEXPRESS;Initial Catalog=netmarket;Integrated Security=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
